# Any6D

./: .gitignore  Dockerfile  LICENSE  README.md  metrics.py  requirements.txt  run_demo.py  run_ho3d_anchor.py  run_ho3d_query.py  sam2_instantmesh.py
bop_toolkit/bop_toolkit_lib/: pose_error.py  renderer_vispy.py
foundationpose/mycpp/: CMakeLists.txt
instantmesh/: pyproject.toml
instantmesh/configs/: instant-mesh-large.yaml
sam2/: setup.py  test.py
scripts/: reproject_overlay.py  vis_viser.py
