[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instantmesh"
version = "0.1.0"
description = "InstantMesh: training and inference code"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "InstantMesh Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Deps pulled from requirements.txt to avoid duplication.
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
# Keep the current import style (e.g., `from src.utils import ...`).
where = ["."]
include = ["src*"]
exclude = []

